<resources>
    <string name="app_name">WFI2017</string>
    <string name="start_desc">Lets me ask you few questions, before you get started. </string>

    <string name="q1">1. What is your name ? </string>

    <string name="q2">2. Your Gender ? </string>

    <string name="q3">3. How old are you?</string>

    <string name="q4">4. Input your weight (In Kg.)</string>

    <string name="q5">5. Enter Your Height </string>

    <string name="q6">6. Choose you activity :</string>

    <string name="q6_1">Sedentary lifestyle</string>

    <string name="q6_2">Slightly active lifestyle 1&#8211;3 days/week </string>
    
    <string name="q6_3">Moderately active lifestyle 3&#8211;5 days/week</string>

    <string name="q6_4">Active lifestyle 6&#8211;7 days/week</string>

    <string name="q6_5">Very active lifestyle twice a day </string>

    //Profile_Menu
    <string name="edit">Edit</string>

    <string name="choose_food">Select Food Type</string>

    //Food Types
    <string name="type_drinks">Drinks</string>
    <string name="type_dish">Dish</string>
    <string name="type_fruits">Fruit</string>
    <string name="type_vegetables">Vegetables</string>
    <string name="type_snacks">Snacks</string>
    <string name="type_soups">Soups</string>
    <string name="type_nonveg">Non-Veg</string>

    <string name="action_settings">Settings</string>
    <string name="image_details_header">Details:</string>
    <string name="image_preview_header">Preview:</string>
    <string name="loading_message">Uploading image. Please wait.</string>

    <string name="dialog_select_prompt">Choose a picture</string>
    <string name="dialog_select_camera">Camera</string>
    <string name="dialog_select_gallery">Gallery</string>

    <string name="image_picker_error">Something is wrong with that image. Pick a different one please.</string>

</resources>
