<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#a0baadad"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.parivartan.github.wfi2017.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_margin="10dp"
        android:textSize="18sp"
        android:textColor="#2f7b38"
        android:layout_height="wrap_content"
        android:text="@string/start_desc"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:padding="5dp"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:padding="15dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:textSize="17sp"
                        android:layout_height="wrap_content"
                        android:text="@string/q1"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_marginTop="15dp"
                        android:id="@+id/et_name"
                        android:inputType="textCapCharacters"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_margin="5dp"
                    android:background="#e1e1e1"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:padding="15dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:textSize="17sp"
                        android:layout_height="wrap_content"
                        android:text="@string/q2"/>

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:orientation="horizontal"
                        android:layout_marginTop="15dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/sex_male"
                            android:layout_weight="1"
                            android:text="Male"/>

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:id="@+id/sex_female"
                            android:text="Female"/>

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/sex_none"
                            android:layout_weight="1"
                            android:text="None"/>

                    </RadioGroup>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_margin="5dp"
                    android:background="#e1e1e1"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:padding="15dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="17sp"
                        android:text="@string/q3"/>

                    <EditText
                        android:layout_width="100dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="10dp"
                        android:inputType="number"
                        android:id="@+id/et_weight"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_margin="5dp"
                    android:background="#e1e1e1"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:padding="15dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="17sp"
                        android:text="@string/q4"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="horizontal"
                        android:layout_height="wrap_content">

                        <EditText
                            android:layout_width="50dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginStart="10dp"
                            android:id="@+id/height_ft"
                            android:inputType="textCapCharacters"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="ft"/>

                        <EditText
                            android:layout_width="50dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginStart="10dp"
                            android:id="@+id/height_in"
                            android:inputType="textCapCharacters"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="in"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </android.support.v7.widget.CardView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:id="@+id/bt_next"
        android:layout_marginEnd="10dp"
        android:text="NEXT" />

</LinearLayout>
